--- a/package.json
+++ b/package.json
@@ -5,17 +5,38 @@
   "main": "server/start.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/start"
+    "start": "node $PWD/server/start",
+    "build:release": "cd $PWD/app && webpack --env.release",
+    "build": "cd $PWD/app && webpack",
+    "build:watch": "cd $PWD/app && webpack --env.watch",
+    "postinstall": "npm run build:semantic",
+    "build:semantic": "cd $PWD/app/lib/semantic && gulp build"
   },
   "author": "Jochen Hartl <mail@johartl.net>",
   "license": "ISC",
   "dependencies": {
     "argparse": "1.0.10",
     "body-parser": "1.18.2",
+    "clean-webpack-plugin": "0.1.19",
     "compression": "1.7.2",
+    "copy-webpack-plugin": "4.5.1",
+    "css-loader": "0.28.11",
     "express": "4.16.3",
+    "express-history-api-fallback": "2.2.1",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "1.1.11",
+    "html-webpack-plugin": "3.2.0",
+    "jquery": "3.3.1",
     "morgan": "1.9.0",
-    "vuejs": "3.0.1",
-    "winston": "2.4.1"
+    "node-sass": "4.0.0",
+    "sass-loader": "7.0.1",
+    "semantic-ui": "2.3.1",
+    "style-loader": "0.21.0",
+    "url-loader": "1.0.1",
+    "vue": "2.5.16",
+    "vue-router": "3.0.1",
+    "webpack": "4.6.0",
+    "webpack-cli": "2.1.2",
+    "winston": "2.4.2"
   }
 }
