--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "argparse": "1.0.10",
+    "bcrypt": "2.0.1",
     "body-parser": "1.18.2",
     "clean-webpack-plugin": "0.1.19",
     "compression": "1.7.2",
@@ -27,6 +28,7 @@
     "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
     "jquery": "3.3.1",
+    "jsonwebtoken": "8.2.1",
     "morgan": "1.9.0",
     "node-sass": "4.0.0",
     "pg": "7.4.1",
