--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "morgan": "1.9.0",
     "node-sass": "4.0.0",
     "pg": "7.4.1",
+    "rxjs": "6.1.0",
+    "rxjs-compat": "6.1.0",
     "sass-loader": "7.0.1",
     "semantic-ui": "2.3.1",
     "style-loader": "0.21.0",
