Implement schedule page

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "style-loader": "0.21.0",
     "url-loader": "1.0.1",
     "vue": "2.5.16",
+    "vue-moment": "4.0.0-0",
     "vue-router": "3.0.1",
     "webpack": "4.6.0",
     "webpack-cli": "2.1.2",
