--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "argparse": "1.0.10",
+    "base-href-webpack-plugin": "2.0.0",
     "bcrypt": "2.0.1",
-    "body-parser": "1.18.2",
+    "body-parser": "1.18.3",
     "clean-webpack-plugin": "0.1.19",
     "compression": "1.7.2",
     "copy-webpack-plugin": "4.5.1",
@@ -28,21 +29,21 @@
     "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
     "jquery": "3.3.1",
-    "jsonwebtoken": "8.2.1",
+    "jsonwebtoken": "8.3.0",
     "morgan": "1.9.0",
-    "node-sass": "4.0.0",
-    "pg": "7.4.1",
-    "rxjs": "6.1.0",
-    "rxjs-compat": "6.1.0",
-    "sass-loader": "7.0.1",
+    "node-sass": "4.9.0",
+    "pg": "7.4.3",
+    "rxjs": "6.2.0",
+    "rxjs-compat": "6.2.0",
+    "sass-loader": "7.0.3",
     "semantic-ui": "2.3.1",
     "style-loader": "0.21.0",
     "url-loader": "1.0.1",
     "vue": "2.5.16",
     "vue-moment": "4.0.0-0",
     "vue-router": "3.0.1",
-    "webpack": "4.6.0",
-    "webpack-cli": "2.1.2",
+    "webpack": "4.12.0",
+    "webpack-cli": "3.0.3",
     "winston": "2.4.2"
   }
 }
